created a serialization framework, renamed option enum variants, added recursive definition of players, renamed aggregator artifact into builder, added builder pom for examples, updated java version 20 -> 23, added player examples builder into building process of the builder, replaced serialization of tournament results with java based serialization